--- a/templates/frontend/index.html
+++ b/templates/frontend/index.html
@@ -1,11 +1,18 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p>login</p>
-  </body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Learn with us{% endblock %}
+
+{% block content %}
+  {% if user.is_authenticated %}
+    <p>{{ user.username }}</p>
+  {% else %}
+  <div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Login</a>
+    <a class="btn btn-success btn-lg" href="{% url 'signup' %}" role="button">Sign up</a>
+  </div>
+  {% endif %}
+{% endblock %}
