--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -12,6 +12,9 @@
           {{ form.username.errors }} {{ form.username }}
         </div>
         <div class="form-group">
+          {{ form.email.errors }} {{ form.email }}
+        </div>
+        <div class="form-group">
           {{ form.password1.errors }} {{ form.password1 }}
         </div>
         <div class="form-group">
